--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,9 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    globals: 
+        lastData: '@App\Controller\CartController'
 
 when@test:
     twig:
         strict_variables: true
+        
