--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "symfonycasts/reset-password-bundle": "^1.18",
         "symfonycasts/verify-email-bundle": "^1.14",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "vich/uploader-bundle": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
