--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,6 +37,13 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/article/add, roles: ROLE_ADMIN }
+        - { path: ^/origine/add, roles: ROLE_ADMIN }
+        - { path: ^/categorie/add, roles: ROLE_ADMIN }
+        - { path: ^/facture/add, roles: ROLE_ADMIN }
+        - { path: ^/facture/del, roles: ROLE_ADMIN }
+        - { path: ^/origine/del, roles: ROLE_ADMIN }
+        - { path: ^/commande/VoirClickAndCollect, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
