--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,8 +1,10 @@
 vich_uploader:
     db_driver: orm
+    metadata:
+        type: attribute
 
     mappings:
        recipe_images:
-           uri_prefix: /Img/products
-           upload_destination: '%kernel.project_dir%/public/Img/'
+           uri_prefix: /Img
+           upload_destination: '%kernel.project_dir%/public/Img'
            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
